------------------
Pylint's ChangeLog
------------------

What's New in Pylint 2.10.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.10.rst'

* Added ``time.clock`` to deprecated functions/methods for python 3.3


What's New in Pylint 2.9.4?
===========================
Release date: TBA

..
  Put bug fixes that should not wait for a new minor version here

* Fix bug in which --fail-on can return a zero exit code even when the specified issue is present

  Closes #4296
  Closes #3363

* Fix hard failure when handling missing attribute in a class with duplicated bases

  Closes #4687

* Fix false-positive ``consider-using-with`` (R1732) if a ternary conditional is used together with ``with``

  Closes #4676

* Fix false-positive ``deprecated-module`` when relative import uses deprecated module name.

  Closes #4629

* Fix false-positive ``consider-using-with`` (R1732) if ``contextlib.ExitStack`` takes care of calling the ``__exit__`` method

  Closes #4654

* Fix a false positive for ``unused-private-member`` when mutating a private attribute
  with ``cls``

  Closes #4657

* Fix ignored empty functions by similarities checker with "ignore-signatures" option enabled

  Closes #4652

* Fix false-positive of ``use-maxsplit-arg`` when index is incremented in
  a loop

  Closes #4664

* Don't emit ``cyclic-import`` message if import is guarded by ``typing.TYPE_CHECKING``.

  Closes #3525

* Fix false-positive ``not-callable`` with alternative ``TypedDict`` syntax

  Closes #4715

* Clarify documentation for consider-using-from-import

* Don't emit ``unreachable`` warning for empty generator functions

  Closes #4698

* Don't emit ``import-error``, ``no-name-in-module``, and ``ungrouped-imports``
  for imports guarded by ``sys.version_info`` or ``typing.TYPE_CHECKING``.

  Closes #3285
  Closes #3382

* Fix ``invalid-overridden-method`` with nested property

  Closes #4368
